force-app/main/default/objects/builder__c/builder__c.object-meta.xml
<CustomObject>
    <label>builder</label>
    <nameField>
        <label>builder Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>builders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>