force-app/main/default/objects/builder__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>builders (Account)</relationshipLabel>
    <relationshipName>builders1</relationshipName>
    <type>Lookup</type>
</CustomField>