force-app/main/default/objects/builder__c/fields/Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Id</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>builders</relationshipLabel>
    <relationshipName>builders</relationshipName>
    <type>Lookup</type>
</CustomField>