force-app/main/default/objects/builder__c/fields/Active_Plan__c.field-meta.xml
<CustomField>
    <fullName>Active_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active Plan</label>
    <type>Checkbox</type>
</CustomField>