force-app/main/default/objects/builder__c/fields/Income__c.field-meta.xml
<CustomField>
    <fullName>Income__c</fullName>
    <label>Income</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>